[gd_scene load_steps=29 format=3 uid="uid://btdff8w6xtbnm"]

[ext_resource type="Script" path="res://Player/UI/Magic Selector/MagicSelectorUI.gd" id="1_2yv1n"]
[ext_resource type="Script" path="res://Player/Managers/SpellManager.gd" id="2_1y5jd"]
[ext_resource type="Script" path="res://Player/UI/Magic Selector/SpellTypes/Heal.gd" id="3_a5110"]
[ext_resource type="Script" path="res://Player/UI/Magic Selector/SpellBullets/Spell_Bullets.gd" id="3_texis"]
[ext_resource type="PackedScene" uid="uid://xdol3wbn1mjt" path="res://Player/UI/Magic Selector/SpellBullets/spell_bullet.tscn" id="4_7xxsw"]
[ext_resource type="Shader" path="res://Shaders/2dShaders/Greyout.gdshader" id="5_bjuky"]
[ext_resource type="Theme" uid="uid://bbkiu03l5rql5" path="res://Themes/Border.tres" id="6_l040f"]
[ext_resource type="PackedScene" uid="uid://b4riit7ksn7b1" path="res://Player/UI/Magic Selector/Spell/spell.tscn" id="7_6kx6i"]
[ext_resource type="Script" path="res://Player/UI/Magic Selector/SpellTypes/3D_Spell_Effects/Magic_Missle/Magic_Missle_Spawner.gd" id="8_rd0yl"]
[ext_resource type="Script" path="res://Player/UI/Magic Selector/SpellTypes/3D_Spell_Effects/Fireball/FireBall_spawner.gd" id="9_vm0ms"]
[ext_resource type="Texture2D" uid="uid://dyi711ysvum6w" path="res://Assets/2dIcons/KeyBoard&Mouse_Icons/key_tab_outline.png" id="10_0sbxt"]
[ext_resource type="Texture2D" uid="uid://dnlyn7j27qk36" path="res://Assets/2dIcons/KeyBoard&Mouse_Icons/mouse_scroll_vertical_outline.png" id="12_xikhc"]
[ext_resource type="Texture2D" uid="uid://dgae46kr4ebxl" path="res://Assets/2dIcons/KeyBoard&Mouse_Icons/keyboard_v_outline.png" id="13_sxaha"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g72f8"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ho1s1"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_chhj6"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_av582"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rcru2"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_52nnm"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xemhs"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_220yr"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8vwu4"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xe860"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l2b5c"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_euyap"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fsu00"]
shader = ExtResource("5_bjuky")
shader_parameter/isActive = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rt8t2"]
bg_color = Color(0.411765, 0.807843, 0.960784, 0.0784314)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_jpsb6"]
font_size = 30
outline_size = 10

[node name="MagicSelector" type="Node2D" node_paths=PackedStringArray("spell_manager")]
script = ExtResource("1_2yv1n")
spell_manager = NodePath("SpellContainer")

[node name="SpellContainer" type="Node2D" parent="." node_paths=PackedStringArray("spell_bullet_manager", "spell1", "spell2", "spell3", "spell4", "slot_position1", "slot_position2", "slot_position3")]
position = Vector2(899, 473)
script = ExtResource("2_1y5jd")
spell_bullet_manager = NodePath("Spell_Bullets")
spell1 = NodePath("Heal")
spell2 = NodePath("Magic Missle")
spell3 = NodePath("FireBall")
spell4 = NodePath("Thorns")
slot_position1 = NodePath("Slot_container/SlotPosition1")
slot_position2 = NodePath("Slot_container/SlotPosition2")
slot_position3 = NodePath("Slot_container/SlotPosition3")

[node name="Spell_Bullets" type="Node2D" parent="SpellContainer"]
position = Vector2(-55, 0)
script = ExtResource("3_texis")

[node name="Spell_Bullet" parent="SpellContainer/Spell_Bullets" instance=ExtResource("4_7xxsw")]
position = Vector2(-700, -370)

[node name="Icon" parent="SpellContainer/Spell_Bullets/Spell_Bullet" index="0"]
material = SubResource("ShaderMaterial_g72f8")

[node name="Spell_Bullet2" parent="SpellContainer/Spell_Bullets" node_paths=PackedStringArray("bullet_icon") instance=ExtResource("4_7xxsw")]
position = Vector2(-670, -370)
bullet_icon = NodePath("../Spell_Bullet/Icon")

[node name="Icon" parent="SpellContainer/Spell_Bullets/Spell_Bullet2" index="0"]
material = SubResource("ShaderMaterial_ho1s1")

[node name="Spell_Bullet3" parent="SpellContainer/Spell_Bullets" node_paths=PackedStringArray("bullet_icon") instance=ExtResource("4_7xxsw")]
position = Vector2(-640, -370)
bullet_icon = NodePath("../Spell_Bullet/Icon")

[node name="Icon" parent="SpellContainer/Spell_Bullets/Spell_Bullet3" index="0"]
material = SubResource("ShaderMaterial_chhj6")

[node name="Spell_Bullet4" parent="SpellContainer/Spell_Bullets" node_paths=PackedStringArray("bullet_icon") instance=ExtResource("4_7xxsw")]
material = SubResource("ShaderMaterial_av582")
position = Vector2(-610, -370)
bullet_icon = NodePath("../Spell_Bullet/Icon")

[node name="Icon" parent="SpellContainer/Spell_Bullets/Spell_Bullet4" index="0"]
material = SubResource("ShaderMaterial_rcru2")

[node name="Spell_Bullet5" parent="SpellContainer/Spell_Bullets" node_paths=PackedStringArray("bullet_icon") instance=ExtResource("4_7xxsw")]
material = SubResource("ShaderMaterial_52nnm")
position = Vector2(-580, -370)
bullet_icon = NodePath("../Spell_Bullet/Icon")

[node name="Icon" parent="SpellContainer/Spell_Bullets/Spell_Bullet5" index="0"]
material = SubResource("ShaderMaterial_xemhs")

[node name="Spell_Bullet6" parent="SpellContainer/Spell_Bullets" node_paths=PackedStringArray("bullet_icon") instance=ExtResource("4_7xxsw")]
material = SubResource("ShaderMaterial_220yr")
position = Vector2(-550, -370)
bullet_icon = NodePath("../Spell_Bullet/Icon")

[node name="Spell_Bullet7" parent="SpellContainer/Spell_Bullets" node_paths=PackedStringArray("bullet_icon") instance=ExtResource("4_7xxsw")]
material = SubResource("ShaderMaterial_220yr")
position = Vector2(-520, -370)
bullet_icon = NodePath("../Spell_Bullet/Icon")

[node name="Icon" parent="SpellContainer/Spell_Bullets/Spell_Bullet7" index="0"]
material = SubResource("ShaderMaterial_8vwu4")

[node name="Spell_Bullet8" parent="SpellContainer/Spell_Bullets" node_paths=PackedStringArray("bullet_icon") instance=ExtResource("4_7xxsw")]
material = SubResource("ShaderMaterial_220yr")
position = Vector2(-490, -370)
bullet_icon = NodePath("../Spell_Bullet/Icon")

[node name="Icon" parent="SpellContainer/Spell_Bullets/Spell_Bullet8" index="0"]
material = SubResource("ShaderMaterial_xe860")

[node name="Spell_Bullet9" parent="SpellContainer/Spell_Bullets" node_paths=PackedStringArray("bullet_icon") instance=ExtResource("4_7xxsw")]
material = SubResource("ShaderMaterial_220yr")
position = Vector2(-460, -370)
bullet_icon = NodePath("../Spell_Bullet/Icon")

[node name="Icon" parent="SpellContainer/Spell_Bullets/Spell_Bullet9" index="0"]
material = SubResource("ShaderMaterial_l2b5c")

[node name="Spell_Bullet10" parent="SpellContainer/Spell_Bullets" node_paths=PackedStringArray("bullet_icon") instance=ExtResource("4_7xxsw")]
material = SubResource("ShaderMaterial_euyap")
position = Vector2(-430, -370)
bullet_icon = NodePath("../Spell_Bullet/Icon")

[node name="Icon" parent="SpellContainer/Spell_Bullets/Spell_Bullet10" index="0"]
material = SubResource("ShaderMaterial_fsu00")

[node name="Slot_container" type="Node2D" parent="SpellContainer"]
position = Vector2(30, 0)

[node name="SlotPosition1" type="Marker2D" parent="SpellContainer/Slot_container"]
position = Vector2(100, -30)

[node name="SlotPosition2" type="Marker2D" parent="SpellContainer/Slot_container"]
position = Vector2(100, 0)

[node name="Panel" type="Panel" parent="SpellContainer/Slot_container/SlotPosition2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -20.0
offset_right = 99.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("6_l040f")

[node name="SlotPosition3" type="Marker2D" parent="SpellContainer/Slot_container"]
position = Vector2(100, 30)

[node name="Heal" type="Node2D" parent="SpellContainer" node_paths=PackedStringArray("selector")]
visible = false
script = ExtResource("3_a5110")
amount = 20
selector = NodePath("../..")

[node name="Label" parent="SpellContainer/Heal" instance=ExtResource("7_6kx6i")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -14.0
offset_right = 105.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
spell_name = "Heal"

[node name="Panel" parent="SpellContainer/Heal/Label" index="0"]
offset_top = -6.0
offset_bottom = 6.0

[node name="Magic Missle" type="Node2D" parent="SpellContainer" node_paths=PackedStringArray("selector")]
visible = false
script = ExtResource("8_rd0yl")
selector = NodePath("../..")

[node name="Label" parent="SpellContainer/Magic Missle" instance=ExtResource("7_6kx6i")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -14.0
offset_right = 105.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Magic Bullet"
spell_name = "Magic Bullet"

[node name="Panel" parent="SpellContainer/Magic Missle/Label" index="0"]
offset_top = -6.0
offset_bottom = 6.0

[node name="FireBall" type="Node2D" parent="SpellContainer" node_paths=PackedStringArray("selector")]
visible = false
script = ExtResource("9_vm0ms")
selector = NodePath("../..")

[node name="Label" parent="SpellContainer/FireBall" instance=ExtResource("7_6kx6i")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -14.0
offset_right = 105.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Fireball"
spell_name = "Fireball"

[node name="Panel" parent="SpellContainer/FireBall/Label" index="0"]
offset_top = -6.0
offset_bottom = 6.0

[node name="Thorns" type="Node2D" parent="SpellContainer"]
visible = false

[node name="Label" parent="SpellContainer/Thorns" instance=ExtResource("7_6kx6i")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -14.0
offset_right = 105.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Thorns
"
spell_name = "Thorns"

[node name="Panel" parent="SpellContainer/Thorns/Label" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_rt8t2")

[node name="ScrollCoolDown" type="Timer" parent="SpellContainer"]
wait_time = 0.15

[node name="KeyIcons" type="Node2D" parent="."]
position = Vector2(842, 470)

[node name="KeyTabOutline" type="Sprite2D" parent="KeyIcons"]
texture = ExtResource("10_0sbxt")

[node name="MouseScrollVerticalOutline" type="Sprite2D" parent="KeyIcons"]
position = Vector2(55, 0)
texture = ExtResource("12_xikhc")

[node name="Label" type="Label" parent="KeyIcons"]
offset_left = -49.0
offset_top = -23.0
offset_right = -9.0
offset_bottom = 19.0
text = "/"
label_settings = SubResource("LabelSettings_jpsb6")

[node name="KeyboardVOutline" type="Sprite2D" parent="KeyIcons"]
position = Vector2(-89, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_sxaha")

[connection signal="timeout" from="SpellContainer/ScrollCoolDown" to="SpellContainer" method="_on_scroll_cool_down_timeout"]

[editable path="SpellContainer/Spell_Bullets/Spell_Bullet"]
[editable path="SpellContainer/Spell_Bullets/Spell_Bullet2"]
[editable path="SpellContainer/Spell_Bullets/Spell_Bullet3"]
[editable path="SpellContainer/Spell_Bullets/Spell_Bullet4"]
[editable path="SpellContainer/Spell_Bullets/Spell_Bullet5"]
[editable path="SpellContainer/Spell_Bullets/Spell_Bullet6"]
[editable path="SpellContainer/Spell_Bullets/Spell_Bullet7"]
[editable path="SpellContainer/Spell_Bullets/Spell_Bullet8"]
[editable path="SpellContainer/Spell_Bullets/Spell_Bullet9"]
[editable path="SpellContainer/Spell_Bullets/Spell_Bullet10"]
[editable path="SpellContainer/Heal/Label"]
[editable path="SpellContainer/Magic Missle/Label"]
[editable path="SpellContainer/FireBall/Label"]
[editable path="SpellContainer/Thorns/Label"]
